--- a/src/Components/portfolio/portfolio.scss
+++ b/src/Components/portfolio/portfolio.scss
@@ -2,6 +2,10 @@
 
 .portfolio {
   position: relative;
+
+  @include mobile {
+    padding-bottom: 10px;
+  }
   .progress {
     position: sticky;
     top: 0;
@@ -41,6 +45,7 @@
 
       @include mobile {
         flex-direction: column;
+        padding-bottom: 20px;
       }
 
       .imageContainer {
@@ -81,10 +86,17 @@
 
         h1 {
           font-size: 72px;
+          @include mobile {
+            font-size: 50px;
+          }
         }
 
         p {
           font-size: 26px;
+
+          @include mobile {
+            font-size: 20px;
+          }
         }
 
         button {
